fixed small screen layout issues on navbar and titles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -171,7 +171,7 @@ ul.pagination > li {
     color: white;
 }
 
-/* -------------------------------- Card Image */
+/* -------------------------------- Images */
 
 .card-img {
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
@@ -185,6 +185,15 @@ ul.pagination > li {
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
     -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     border-radius: 2%;
+}
+
+.prod-standard {
+    max-height: 50%;
+    max-width: 50%;
+}
+
+.prod-panorama {
+    width: 100%;
 }
 
 /* -------------------------------- bootstrap toasts */
@@ -205,6 +214,7 @@ ul.pagination > li {
 }
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -217,6 +227,7 @@ ul.pagination > li {
 }
 
 /* Convenience classes - colors copied from Bootstrap */
+
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
@@ -254,7 +265,6 @@ ul.pagination > li {
     overflow-x: hidden;
     overflow-y: auto;
 }
-
 
 /* -------------------------------- Media Queries */
 
